[gd_scene load_steps=110 format=3 uid="uid://b2q5462bdb0q2"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_b51by"]
[ext_resource type="Texture2D" uid="uid://cyr1632llp4qs" path="res://assets/players/Sprites/DASH.png" id="2_egfxe"]
[ext_resource type="Texture2D" uid="uid://bpgd7ocxotqmh" path="res://assets/players/Sprites/DEATH.png" id="3_rg08q"]
[ext_resource type="Texture2D" uid="uid://bm5fph5owtmxg" path="res://assets/players/Sprites/DEFEND.png" id="4_ig3ry"]
[ext_resource type="Texture2D" uid="uid://brhcspiq0cxxy" path="res://assets/players/Sprites/ATTACK 1.png" id="5_ob6s4"]
[ext_resource type="Texture2D" uid="uid://cfibaw60nh7nc" path="res://assets/players/Sprites/ATTACK 2.png" id="6_58o0x"]
[ext_resource type="Texture2D" uid="uid://bf32gnjtuoy2y" path="res://assets/players/Sprites/ATTACK 3.png" id="7_3e8h6"]
[ext_resource type="Texture2D" uid="uid://bgkhgccrh835r" path="res://assets/players/Sprites/HURT.png" id="8_ibdch"]
[ext_resource type="Texture2D" uid="uid://dy7gc130qkvma" path="res://assets/players/Sprites/IDLE.png" id="9_5jus7"]
[ext_resource type="Texture2D" uid="uid://bc1xqqkty6xes" path="res://assets/players/Sprites/JUMP.png" id="10_4ebdh"]
[ext_resource type="Texture2D" uid="uid://b3b2kd5o8dhvt" path="res://assets/players/Sprites/RUN.png" id="11_srnqu"]
[ext_resource type="Texture2D" uid="uid://br7gfphpal5b6" path="res://assets/players/Sprites/SPECIAL ATTACK.png" id="12_1pdjf"]
[ext_resource type="Texture2D" uid="uid://h7ym4ad3ukqh" path="res://assets/players/Sprites/THROW.png" id="13_5hd7f"]
[ext_resource type="Texture2D" uid="uid://lmoy8tk3u1tr" path="res://assets/players/effects/Free Smoke Fx  Pixel 05.png" id="14_ilypw"]
[ext_resource type="Script" path="res://scenes/player/effect_manager.gd" id="14_ws8m1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k6qhq"]
atlas = ExtResource("5_ob6s4")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ittnu"]
atlas = ExtResource("5_ob6s4")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_akrrc"]
atlas = ExtResource("5_ob6s4")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1mmd"]
atlas = ExtResource("5_ob6s4")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_f67o4"]
atlas = ExtResource("5_ob6s4")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2fmo"]
atlas = ExtResource("6_58o0x")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfw2e"]
atlas = ExtResource("6_58o0x")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3w3d"]
atlas = ExtResource("6_58o0x")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxhdu"]
atlas = ExtResource("6_58o0x")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvqb2"]
atlas = ExtResource("6_58o0x")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_aopc5"]
atlas = ExtResource("7_3e8h6")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq86v"]
atlas = ExtResource("7_3e8h6")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_kky4e"]
atlas = ExtResource("7_3e8h6")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_n55xa"]
atlas = ExtResource("7_3e8h6")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_iongs"]
atlas = ExtResource("7_3e8h6")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_iimfh"]
atlas = ExtResource("2_egfxe")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c7dp"]
atlas = ExtResource("2_egfxe")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0v63"]
atlas = ExtResource("2_egfxe")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxhor"]
atlas = ExtResource("2_egfxe")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkpod"]
atlas = ExtResource("2_egfxe")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul7um"]
atlas = ExtResource("2_egfxe")
region = Rect2(465, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddmed"]
atlas = ExtResource("2_egfxe")
region = Rect2(558, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cki0"]
atlas = ExtResource("2_egfxe")
region = Rect2(651, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6wg2"]
atlas = ExtResource("3_rg08q")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvh1w"]
atlas = ExtResource("3_rg08q")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cyds"]
atlas = ExtResource("3_rg08q")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_li4a2"]
atlas = ExtResource("3_rg08q")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_qohma"]
atlas = ExtResource("3_rg08q")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d3tc"]
atlas = ExtResource("3_rg08q")
region = Rect2(465, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsqca"]
atlas = ExtResource("3_rg08q")
region = Rect2(558, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cp6h"]
atlas = ExtResource("3_rg08q")
region = Rect2(651, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufsnv"]
atlas = ExtResource("3_rg08q")
region = Rect2(744, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0kte"]
atlas = ExtResource("3_rg08q")
region = Rect2(837, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_650jx"]
atlas = ExtResource("4_ig3ry")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg86l"]
atlas = ExtResource("4_ig3ry")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_omw32"]
atlas = ExtResource("4_ig3ry")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0817"]
atlas = ExtResource("4_ig3ry")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_37py7"]
atlas = ExtResource("4_ig3ry")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8oii"]
atlas = ExtResource("4_ig3ry")
region = Rect2(465, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pnax"]
atlas = ExtResource("8_ibdch")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_qc02m"]
atlas = ExtResource("8_ibdch")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6ogp"]
atlas = ExtResource("8_ibdch")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8wsi"]
atlas = ExtResource("9_5jus7")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u7he"]
atlas = ExtResource("9_5jus7")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_23bqt"]
atlas = ExtResource("9_5jus7")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4eg2"]
atlas = ExtResource("9_5jus7")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_s61wb"]
atlas = ExtResource("9_5jus7")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_fidpb"]
atlas = ExtResource("10_4ebdh")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fdkr"]
atlas = ExtResource("10_4ebdh")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii8y8"]
atlas = ExtResource("10_4ebdh")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3141"]
atlas = ExtResource("11_srnqu")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xyf3"]
atlas = ExtResource("11_srnqu")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wcec"]
atlas = ExtResource("11_srnqu")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bc3s"]
atlas = ExtResource("11_srnqu")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ma1"]
atlas = ExtResource("11_srnqu")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7y3y"]
atlas = ExtResource("11_srnqu")
region = Rect2(465, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox5ya"]
atlas = ExtResource("11_srnqu")
region = Rect2(558, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_81jxn"]
atlas = ExtResource("11_srnqu")
region = Rect2(651, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3c5"]
atlas = ExtResource("12_1pdjf")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_lggkc"]
atlas = ExtResource("12_1pdjf")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ick2d"]
atlas = ExtResource("12_1pdjf")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vws6"]
atlas = ExtResource("12_1pdjf")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_eddqy"]
atlas = ExtResource("12_1pdjf")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci6eb"]
atlas = ExtResource("12_1pdjf")
region = Rect2(465, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvulr"]
atlas = ExtResource("12_1pdjf")
region = Rect2(558, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dsth"]
atlas = ExtResource("12_1pdjf")
region = Rect2(651, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2uj3"]
atlas = ExtResource("12_1pdjf")
region = Rect2(744, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq0vm"]
atlas = ExtResource("12_1pdjf")
region = Rect2(837, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq5ca"]
atlas = ExtResource("12_1pdjf")
region = Rect2(930, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_df2fo"]
atlas = ExtResource("12_1pdjf")
region = Rect2(1023, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_72dye"]
atlas = ExtResource("12_1pdjf")
region = Rect2(1116, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1ad"]
atlas = ExtResource("12_1pdjf")
region = Rect2(1209, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_7htkm"]
atlas = ExtResource("13_5hd7f")
region = Rect2(0, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8dsi"]
atlas = ExtResource("13_5hd7f")
region = Rect2(93, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_73x0x"]
atlas = ExtResource("13_5hd7f")
region = Rect2(186, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rcwt"]
atlas = ExtResource("13_5hd7f")
region = Rect2(279, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxgrh"]
atlas = ExtResource("13_5hd7f")
region = Rect2(372, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq3xh"]
atlas = ExtResource("13_5hd7f")
region = Rect2(465, 0, 93, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_odvnv"]
atlas = ExtResource("13_5hd7f")
region = Rect2(558, 0, 93, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_pdjgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6qhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ittnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akrrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1mmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f67o4")
}],
"loop": false,
"name": &"attack1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2fmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfw2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3w3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvqb2")
}],
"loop": false,
"name": &"attack2",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aopc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq86v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kky4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n55xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iongs")
}],
"loop": false,
"name": &"attack3",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iimfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c7dp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0v63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxhor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkpod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul7um")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddmed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cki0")
}],
"loop": false,
"name": &"dash",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6wg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvh1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cyds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li4a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qohma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d3tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsqca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cp6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufsnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0kte")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_650jx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg86l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omw32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0817")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37py7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8oii")
}],
"loop": false,
"name": &"defend",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pnax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qc02m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6ogp")
}],
"loop": false,
"name": &"hurt",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8wsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u7he")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23bqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4eg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s61wb")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fidpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fdkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii8y8")
}],
"loop": false,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3141")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xyf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wcec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bc3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ma1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7y3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox5ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81jxn")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lggkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ick2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vws6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eddqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci6eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvulr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dsth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2uj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq0vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq5ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_df2fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72dye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1ad")
}],
"loop": false,
"name": &"special_attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7htkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8dsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73x0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rcwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxgrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq3xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odvnv")
}],
"loop": false,
"name": &"throw",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pwo0r"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a6pnd"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3ls5"]
radius = 25.0
height = 114.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jbytk"]
atlas = ExtResource("14_ilypw")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5krme"]
atlas = ExtResource("14_ilypw")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6d82"]
atlas = ExtResource("14_ilypw")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uevna"]
atlas = ExtResource("14_ilypw")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm07h"]
atlas = ExtResource("14_ilypw")
region = Rect2(256, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qax8"]
atlas = ExtResource("14_ilypw")
region = Rect2(320, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqh2f"]
atlas = ExtResource("14_ilypw")
region = Rect2(384, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_27ig2"]
atlas = ExtResource("14_ilypw")
region = Rect2(448, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_44gsb"]
atlas = ExtResource("14_ilypw")
region = Rect2(512, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_05tju"]
atlas = ExtResource("14_ilypw")
region = Rect2(576, 704, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_8tauv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbytk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5krme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6d82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uevna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm07h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qax8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqh2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27ig2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44gsb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05tju")
}],
"loop": false,
"name": &"smoke",
"speed": 15.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_b51by")

[node name="AniSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -27)
sprite_frames = SubResource("SpriteFrames_pdjgy")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_pwo0r")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_a6pnd")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackArea"]
position = Vector2(14, -20)
polygon = PackedVector2Array(2.99999, -0.999998, -26, 6, -2, 41, 22, 40, 30, 18, 19, 5)

[node name="SpecialAttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpecialAttackArea"]
position = Vector2(-1, -33)
shape = SubResource("CapsuleShape2D_a3ls5")

[node name="EffectManager" type="Node2D" parent="."]
script = ExtResource("14_ws8m1")

[node name="DoubleJumpEffect" type="AnimatedSprite2D" parent="EffectManager"]
z_index = 1
position = Vector2(0, 22)
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_8tauv")
animation = &"smoke"
frame = 9
frame_progress = 1.0

[connection signal="animation_finished" from="AniSprite2D" to="." method="_on_ani_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AniSprite2D" to="." method="_on_ani_sprite_2d_frame_changed"]
[connection signal="effect_finished" from="EffectManager" to="." method="_on_effect_manager_effect_finished"]
[connection signal="animation_finished" from="EffectManager/DoubleJumpEffect" to="." method="_on_double_jump_effect_animation_finished"]
